--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <th>ads</th>
                         <th>discount</th>
                         <th>total</th>
+                        <th>count</th>
                         <th>category</th>
                         <th>update</th>
                         <th>delete</th>
