add function deleteAll

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                     <button class="searchCategory">Search By Category</button>
                 </div>
 
+                <div id="deleteAll">
+
+                </div>
+
                 <table>
                     
                     <tr>
@@ -46,7 +50,6 @@
                         <th>ads</th>
                         <th>discount</th>
                         <th>total</th>
-                        <th>count</th>
                         <th>category</th>
                         <th>update</th>
                         <th>delete</th>
