add update function

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
         <div class="outputs">
             <div class="searchBlock">
-                <input type="text" placeholder="Search" id="search">
+                <input onkeyup="searchData(this.value)" type="text" placeholder="Search" id="search">
                 <div class="btnSearch">
-                    <button class="searchTitle">Search By Title</button>
-                    <button class="searchCategory">Search By Category</button>
+                    <button onclick="getSearchMood(this.id)" id="searchTitle">Search By Title</button>
+                    <button onclick="getSearchMood(this.id)" id="searchCategory">Search By Category</button>
                 </div>
 
                 <div id="deleteAll">
